# NeoWatch

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: DEMO.md  IMPROVEMENTS.md  LEARNING_LOG.md  PLAN.md  RETRIEVAL_CONCEPTS.md  WATCH_LOOP_PLAN.md  WATCH_RUNBOOK.md
src/neowatch/: __init__.py  config.py  context.py  llm.py  logging_config.py  main.py  pipeline.py
src/neowatch/agents/: __init__.py  base.py  calc_agent.py  earth_events_agent.py  fetch_agent.py  image_agent.py  models.py  orchestrator.py  rag_agent.py  space_weather_agent.py  synthesis_agent.py
src/neowatch/calc/: __init__.py  geo.py  models.py  orbital.py  space_weather.py
src/neowatch/data/: __init__.py  apod.py  arxiv.py  donki.py  eonet.py  horizons.py  http.py  images.py  models.py  neows.py  noaa_swpc.py  sbdb.py
src/neowatch/domains/: __init__.py  base.py  earth_events.py  neo.py  registry.py  (+1 more)
tests/: __init__.py  conftest.py
tests/fixtures/: .gitkeep  apod.json  arxiv.xml  donki_flr.json  neows_feed.json  sbdb.json
tests/integration/: __init__.py  test_data_clients.py  test_end_to_end.py  test_rag_pipeline.py  test_smoke.py
tests/unit/: __init__.py  fakes.py  test_calc_agent.py  test_calc_orbital.py  test_chunk.py  test_config.py  test_context.py  test_domain_guardrail.py  test_earth_events.py  test_factcheck.py  test_fetch_agent.py  test_image_agent.py  test_images.py  test_logging.py  test_models.py  test_orchestrator.py  test_pipeline.py  test_rag_agent.py  test_registry.py  test_render.py  test_retrieve.py  test_space_weather.py  test_store.py  test_synthesis_agent.py  test_token_budget.py  test_watch_loop.py  test_watch_neo.py  test_watch_rules.py  test_watch_rules_neo.py  test_watch_sinks.py  test_watch_store.py  test_watch_tick.py
(+31 files in other folders)
